[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feinsum"
description = "Fast(er?) Einsum"
authors = [
    { name = "Kaushik Kulkarni", email = "kaushikcfd@gmail.com" },
]
license = { file = "LICENSE.txt" }
readme = { file = "README.md", content-type = "text/x-rst; charset=UTF-8" }
urls = { Homepage = "https://github.com/kaushikcfd/feinsum/" }
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "numpy>=1.20",
    "loopy",
    "pytools",
    "islpy",
    "more-itertools",
    "pytz",
    "opentuner",
    "pyopencl",
    "immutables",
    "tabulate",
    "pynauty",
    "bidict",
    "opt_einsum",
]

dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "setuptools",
    "pytest",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = ["any"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]

[tool.setuptools.package-data]
feinsum = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "VERSION.VERSION" }

[tool.pytest.ini_options]
addopts = "--verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["test"]

[tool.ruff]
preview = true
line-length = 85
exclude = [
    "doc/conf.py",
    # FIXME: Remove this once the revamp is done.
    "src/feinsum/canonicalization.py"
]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle
  "F",   # pyflakes

  "I",   # flake8-isort

  "N",   # pep8-naming
  "NPY", # numpy
  "Q",   # flake8-quotes
  "W",   # pycodestyle

  "UP",  # pyupgrade
  "RUF",  # ruff
  "FA",
  "TC",
]

ignore = ["B023", "C901", "N806"]

[tool.mypy]

[[tool.mypy.overrides]]
module = "islpy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loopy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynauty.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymbolic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyopencl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opt_einsum.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matchpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "multiset.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentuner.*"
ignore_missing_imports = true

[tool.black]
line-length = 85
